tests/react_modules/react_modules.exp
Error ------------------------------------------------------------------------------------ createclass-callsite.js:20:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in propTypes of React
component [2].

   createclass-callsite.js:20:10
   20|         <Hello />
                ^^^^^

References:
   createclass-callsite.js:20:9
   20|         <Hello />
               ^^^^^^^^^ [1]
   createclass-module.js:6:14
                    v
    6|   propTypes: {
    7|     name: React.PropTypes.string.isRequired,
    8|   },
         ^ [2]


Error ------------------------------------------------------------------------------------ createclass-callsite.js:21:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in propTypes of React
component [2].

   createclass-callsite.js:21:10
   21|         <HelloLocal />
                ^^^^^^^^^^

References:
   createclass-callsite.js:21:9
   21|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   createclass-callsite.js:7:14
                    v
    7|   propTypes: {
    8|     name: React.PropTypes.string.isRequired,
    9|   },
         ^ [2]


Error ----------------------------------------------------------------------------- es6class-proptypes-callsite.js:20:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in object type [2].

   es6class-proptypes-callsite.js:20:10
   20|         <Hello />
                ^^^^^

References:
   es6class-proptypes-callsite.js:20:9
   20|         <Hello />
               ^^^^^^^^^ [1]
   es6class-proptypes-module.js:5:37
    5| class Hello extends React.Component<{name: string}> {
                                           ^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------- es6class-proptypes-callsite.js:21:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in object type [2].

   es6class-proptypes-callsite.js:21:10
   21|         <HelloLocal />
                ^^^^^^^^^^

References:
   es6class-proptypes-callsite.js:21:9
   21|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   es6class-proptypes-callsite.js:6:42
    6| class HelloLocal extends React.Component<{name: string}> {
                                                ^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- es6class-types-callsite.js:18:10

Cannot create `Hello` element because property `name` is missing in props [1] but exists in `Props` [2].

   es6class-types-callsite.js:18:10
   18|         <Hello />
                ^^^^^

References:
   es6class-types-callsite.js:18:9
   18|         <Hello />
               ^^^^^^^^^ [1]
   es6class-types-module.js:7:37
    7| class Hello extends React.Component<Props> {
                                           ^^^^^ [2]


Error --------------------------------------------------------------------------------- es6class-types-callsite.js:19:10

Cannot create `HelloLocal` element because property `name` is missing in props [1] but exists in `Props` [2].

   es6class-types-callsite.js:19:10
   19|         <HelloLocal />
                ^^^^^^^^^^

References:
   es6class-types-callsite.js:19:9
   19|         <HelloLocal />
               ^^^^^^^^^^^^^^ [1]
   es6class-types-callsite.js:8:42
    8| class HelloLocal extends React.Component<Props> {
                                                ^^^^^ [2]



Found 6 errors
